--- a/app/index.html
+++ b/app/index.html
@@ -1,28 +1,24 @@
 <!doctype html>
-<html lang="en" ng-app="BranchedTutorial">
+<html lang="en" ng-app="AnnotatedTutorial">
   <head>
     <meta charset="UTF-8">
     <title>Annotated Tutorial</title>
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="/medium-editor/dist/css/medium-editor.css">
-    <link rel="stylesheet" href="/medium-editor/dist/css/themes/default.css">
     <!-- build:[src] scripts/ -->
     <script src="modernizr/modernizr.js"></script>
     <!-- /build -->
   </head>
   <body class="tutorial" ng-controller="mainController">
 
+    <h1>Tutorial Title</h1>
     <div>
-      <h1>Tutorial title</h1>
-      <div class="content">First paragraph</div>
-      <div class="icon">!</div>
-      <div class="content">Second paragraph</div>
-      <div class="notes">Notes for second paragraph</div>
-      <div class="content">Third paragraph</div>
+      <div class="content" ng-repeat="section in tutorial">
+        <span class="icon" ng-if="section.notes.length > 0">!</span>
+        {{section.content}}
+        <div class="note" ng-repeat="note in section.notes">{{note}}</div>
+      </div>
     </div>
-
-    <div ng-repeat="note in tutorial">{{note.note}}</div>
 
     <!-- build:js scripts/dependencies.js -->
     <script src="/angularjs/angular.js"></script>
