--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,19 @@
       <div class="content" ng-repeat="section in tutorial">
 
         <!-- Icons for notes -->
-        <div class="icon-position" ng-if="section.notes.length > 0">
-          <button class="icon" ng-click="$parent.showNote = !showNote">!</button>
+        <div class="icon-position">
+          <button class="icon icon-details"
+                  ng-if="section.notes.details.length > 0"
+                  ng-click="$parent.showDetails = !showDetails">+</button>
+          <button class="icon icon-corrections"
+                  ng-if="section.notes.corrections.length > 0"
+                  ng-click="$parent.showCorrections = !showCorrections">!</button>
+          <button class="icon icon-methods"
+                  ng-if="section.notes.methods.length > 0"
+                  ng-click="$parent.showMethods = !showMethods">&#8618;</button>
+          <button class="icon icon-command"
+                  ng-if="section.notes.command.length > 0"
+                  ng-click="$parent.showCommand = !showCommand">?</button>
         </div>
 
         <!-- Tutorial step -->
@@ -28,22 +39,33 @@
         </div>
 
         <!-- Notes for step -->
-        <div class="note" ng-show="showNote">
-          <div ng-repeat="note in section.notes">{{note}}</div>
+        <div ng-show="showDetails">
+          <div class="note note-details" ng-repeat="note in section.notes.details">{{note}}</div>
+        </div>
+        <div ng-show="showCorrections">
+          <div class="note note-corrections" ng-repeat="note in section.notes.corrections">{{note}}</div>
+        </div>
+        <div ng-show="showMethods">
+          <div class="note note-methods" ng-repeat="note in section.notes.methods">{{note}}</div>
+        </div>
+        <div ng-show="showCommand">
+          <div class="note note-command" ng-repeat="note in section.notes.command">{{note}}</div>
         </div>
       </div>
     </div>
 
     <div class="input-container">
-      <div ng-show="hideInput" ng-click="toggleHideInput()">^</div>
+      <button ng-show="hideInput" ng-click="toggleHideInput()">Add a note (Show)</button>
       <div ng-hide="hideInput">
-        <div ng-click="toggleHideInput()">V</div>
-        <button ng-click="toggleSelectMode()">Choose Location</button>
+        <button ng-click="toggleHideInput()">Add a note (Hide)</button>
+        <div>
+          <button ng-click="toggleSelectMode()">Choose Location</button>
+        </div>
         <div>
           <textarea ng-model="newNote"></textarea>
         </div>
         <div>
-          <button ng-click="submitNote()">Submit</button>
+          <button ng-click="submitNote()">Submit Note</button>
         </div>
       </div>
     </div>
