Minor changes to styles.

--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
 
         <div class="input-start-container">
           <div class="highlight input-start" ng-if="selectingLine">Please select the location for your note.</div>
-          <button class="input-start" ng-class="{'highlight': selectingLine}" ng-click="toggleSelectMode()">Add a note</button>
+          <button class="input-start input-start-button" ng-class="{'highlight': selectingLine}" ng-click="toggleSelectMode()">Add a note</button>
         </div>
       </div>
     </div>
