--- a/app/index.html
+++ b/app/index.html
@@ -28,9 +28,9 @@
               <button class="icon icon-command"
                       ng-if="section.notes.command.length > 0"
                       ng-click="$parent.showCommand = !showCommand">?</button>
-            </div>
+            </div><!--
 
-            <div class="grid__item seven-eighths">
+            --><div class="grid__item seven-eighths">
               <div ng-class="{'hoverLine': $parent.selectingLine,
                     'highlight': $parent.selectedLine == $index}"
                    ng-click="lineClicked($index, $event)">
@@ -51,9 +51,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div><!--
 
-        <div class="input-container grid__item one-quarter" ng-if="inputPos >= 0" ng-style="{'top':inputPos + 'px'}" style="padding: 5px;">
+        --><div class="input-container grid__item one-quarter" ng-if="inputPos >= 0" ng-style="{'top':inputPos + 'px'}" style="padding: 5px;">
           <div>
             <button ng-click="typeSelected('details')" class="icon icon-details" ng-class="{'note-details': inputType == 'details'}">+</button>
             <button ng-click="typeSelected('corrections')" class="icon icon-corrections" ng-class="{'note-corrections': inputType == 'corrections'}">!</button>
