--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,8 @@
                 </div>
               </div>
               <div ng-show="showCommand">
-                <div class="note note-command" ng-repeat="note in section.notes.command.notes">
+                <div class="note note-command" ng-repeat="note in section.notes.command.notes"
+                     ng-class="{'highlight-command': note.software === selectedSoftware}">
                   <div>Software: {{note.software}}</div>
                   <div>{{note.note}}</div></div>
               </div>
