--- a/app/index.html
+++ b/app/index.html
@@ -26,18 +26,22 @@
             <div class="grid__item one-eighth is-right-aligned">
               <button class="icon icon-details"
                       ng-if="section.notes.details.length > 0"
-                      ng-click="$parent.showDetails = !showDetails">+</button>
+                      ng-click="$parent.showDetails = !showDetails"
+                      tooltip="Additional Details">+</button>
               <button class="icon icon-corrections"
                       ng-if="section.notes.corrections.length > 0"
-                      ng-click="$parent.showCorrections = !showCorrections">!</button>
+                      ng-click="$parent.showCorrections = !showCorrections"
+                      tooltip="Corrections">!</button>
               <button class="icon icon-methods"
                       ng-class="{'highlight-methods': section.notes.command.software.indexOf(selectedSoftware) > -1}"
                       ng-if="section.notes.methods.length > 0"
-                      ng-click="$parent.showMethods = !showMethods">&#8618;</button>
+                      ng-click="$parent.showMethods = !showMethods"
+                      tooltip="Alternate Methods">&#8618;</button>
               <button class="icon icon-command"
                       ng-class="{'highlight-command': section.notes.command.software.indexOf(selectedSoftware) > -1}"
                       ng-if="section.notes.command.notes.length > 0"
-                      ng-click="$parent.showCommand = !showCommand">?</button>
+                      ng-click="$parent.showCommand = !showCommand"
+                      tooltip="Command Location">?</button>
             </div><!--
 
             --><div class="grid__item six-eighths">
