starting to integrate server

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- build:[src] scripts/ -->
     <script src="modernizr/modernizr.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <!-- /build -->
   </head>
   <body ng-controller="mainController">
@@ -18,28 +19,28 @@
         </select></div>
         <div class="grid__item three-quarters is-extended content">
           <div class="l-block grid grid--full"
-               ng-repeat="section in tutorial"
+               ng-repeat="step in tutorial"
                ng-mouseenter="hover = true"
                ng-mouseleave="hover = false"
                ng-class="{'selected-step': selectedLine === $index}">
             <!-- Buttons to toggle on/off notes -->
             <div class="grid__item one-eighth is-right-aligned">
               <button class="icon icon-details"
-                      ng-if="section.notes.details.length > 0"
+                      ng-if="step.notes.details.length > 0"
                       ng-click="$parent.showDetails = !showDetails"
                       tooltip="Additional Details"></button>
               <button class="icon icon-corrections"
-                      ng-if="section.notes.corrections.length > 0"
+                      ng-if="step.notes.corrections.length > 0"
                       ng-click="$parent.showCorrections = !showCorrections"
                       tooltip="Corrections"></button>
               <button class="icon icon-methods"
-                      ng-class="{'highlight-methods': section.notes.command.software.indexOf(selectedSoftware) > -1}"
-                      ng-if="section.notes.methods.length > 0"
+                      ng-class="{'highlight-methods': step.notes.command.software.indexOf(selectedSoftware) > -1}"
+                      ng-if="step.notes.methods.length > 0"
                       ng-click="$parent.showMethods = !showMethods"
                       tooltip="Alternate Methods"></button>
               <button class="icon icon-command"
-                      ng-class="{'highlight-command': section.notes.command.software.indexOf(selectedSoftware) > -1}"
-                      ng-if="section.notes.command.notes.length > 0"
+                      ng-class="{'highlight-command': step.notes.command.software.indexOf(selectedSoftware) > -1}"
+                      ng-if="step.notes.command.notes.length > 0"
                       ng-click="$parent.showCommand = !showCommand"
                       tooltip="Command Location"></button>
             </div><!--
@@ -47,29 +48,31 @@
             --><div class="grid__item six-eighths">
 
               <!-- Step content -->
-              <div class="main-content">{{section.content}}</div>
+              <!--<div class="main-content">{{step.content}}</div>-->
 
               <!-- Step's image, if any -->
-              <div class="main-content" ng-if="section.image">
-                <img src="{{section.image}}" />
-              </div>
+              <!--<div class="main-content" ng-if="step.image">
+                <img src="{{step.image}}" />
+              </div>-->
+
+              <div class="main-content">{{step.html}}</div>
 
               <!-- Step's notes, if toggled on -->
               <div ng-show="showDetails">
-                <div class="note note-details" ng-repeat="note in section.notes.details">{{note}}</div>
+                <div class="note note-details" ng-repeat="note in step.notes.details">{{note}}</div>
               </div>
               <div ng-show="showCorrections">
-                <div class="note note-corrections" ng-repeat="note in section.notes.corrections">{{note}}</div>
+                <div class="note note-corrections" ng-repeat="note in step.notes.corrections">{{note}}</div>
               </div>
               <div ng-show="showMethods">
-                <div class="note note-methods" ng-repeat="note in section.notes.methods"
+                <div class="note note-methods" ng-repeat="note in step.notes.methods"
                      ng-class="{'highlight-methods': note.software === selectedSoftware}">
                   <div>Software: {{note.software}}</div>
                   <div>{{note.note}}</div>
                 </div>
               </div>
               <div ng-show="showCommand">
-                <div class="note note-command" ng-repeat="note in section.notes.command.notes"
+                <div class="note note-command" ng-repeat="note in step.notes.command.notes"
                      ng-class="{'highlight-command': note.software === selectedSoftware}">
                   <div>Software: {{note.software}}</div>
                   <div>{{note.note}}</div></div>
@@ -94,7 +97,7 @@
           <div ng-show="showTextarea">
             <div class="description">
               <div ng-if="inputType == 'details'">Additional details help other readers understand how to complete a step or why it is important.</div>
-              <div ng-if="inputType == 'corrections'">Corrections alert other readers of an error in the tutorial, or of a detail that might be different in other software versions.</div>
+              <div ng-if="inputType == 'corrections'">Corrections alert other readers of an error in the tutorial, or of a detail that should be different.</div>
               <div ng-if="inputType == 'methods'">Alternate methods describe a different way of accomplishing a step.</div>
               <div ng-if="inputType == 'command'">Command locations help other readers locate a command, tool, option or other menu item.</div>
             </div>
