--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,10 @@
   <body ng-controller="mainController">
     <div class="l-wrap">
       <div class="grid grid--full is-extended">
-        <div class="header">Highlight notes for: <select ng-model="selectedSoftware">
+        <!--<div class="header">Highlight notes for: <select ng-model="selectedSoftware">
           <option>All software</option>
           <option ng-repeat="software in availableSoftware">{{software}}</option>
-        </select></div>
+        </select></div>-->
         <div class="grid__item three-quarters is-extended content">
           <div class="l-block grid grid--full"
                ng-repeat="step in tutorial"
