--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,8 @@
     <!-- build:js scripts/dependencies.js -->
     <script src="/angularjs/angular.js"></script>
     <script src="/angular-sanitize/angular-sanitize.js"></script>
+    <script src="/moment/moment.js"></script>
+    <script src="/angular-moment/angular-moment.js"></script>
     <!-- /build -->
 
     <!-- build:js scripts/templates.js -->
@@ -121,6 +123,7 @@
     <!-- build:js scripts/app.js -->
     <script src="/scripts/app.js"></script>
     <script src="/scripts/tutorialService.js"></script>
+    <script src="/scripts/loggerService.js"></script>
     <script src="/scripts/mainController.js"></script>
     <!-- /build -->
   </body>
