getting ready for deployment

--- a/app/index.html
+++ b/app/index.html
@@ -105,6 +105,12 @@
       </div>
     </div>
 
+    <!-- build:remove -->
+    <script>
+      DEVELOPMENT = true;
+    </script>
+    <!-- /build -->
+
     <!-- build:js scripts/dependencies.js -->
     <script src="/angularjs/angular.js"></script>
     <script src="/angular-sanitize/angular-sanitize.js"></script>
