--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
       <div class="grid grid--full is-extended">
         <div class="grid__item three-quarters is-extended content">
           <div class="l-block grid grid--full"
-               ng-repeat="step in tutorial"
+               ng-repeat="step in tutorialSteps"
                ng-mouseenter="hover = true"
                ng-mouseleave="hover = false"
                ng-class="{'selected-step': selectedLine === $index}">
@@ -48,14 +48,14 @@
 
               <!-- Step's notes, if toggled on -->
               <div ng-show="showCorrections">
-                <div class="note note-corrections" ng-repeat="note in step.notes" ng-if="note.category === 'corrections'">
+                <div class="note note-corrections" ng-repeat="note in step.notes" ng-if="canShowNote(note) && note.category === 'corrections'">
                   <div>{{note.content}}</div>
                   <div class="note-author">Submitted by {{note.author}}</div>
                 </div>
               </div>
 
               <div ng-show="showMethods">
-                <div class="note note-methods" ng-repeat="note in step.notes" ng-if="note.category === 'methods'">
+                <div class="note note-methods" ng-repeat="note in step.notes" ng-if="canShowNote(note) && note.category === 'methods'">
                   <div>Note relevant for: {{note.extra_info}}</div>
                   <div>{{note.content}}</div>
                   <div class="note-author">Submitted by {{note.author}}</div>
@@ -63,17 +63,17 @@
               </div>
 
               <div ng-show="showDetails">
-                <div class="note note-details" ng-repeat="note in step.notes" ng-if="note.category === 'details'">
+                <div class="note note-details" ng-repeat="note in step.notes" ng-if="canShowNote(note) && note.category === 'details'">
                   <div>{{note.content}}</div>
                   <div class="note-author">Submitted by {{note.author}}</div>
                 </div>
               </div>
 
               <div ng-show="showOther">
-                <div class="note note-other" ng-repeat="note in step.notes" ng-if="note.category === 'other'">
+                <div class="note note-other" ng-repeat="note in step.notes" ng-if="canShowNote(note) && note.category === 'other'">
                   <div>Note category: {{note.extra_info}}</div>
                   <div>{{note.content}}</div>
-                  <div ng-if="(note.software|lowercase) === 'question'">SDFSDF</div>
+                  <div class="plain-button" ng-if="(note.extra_info|lowercase) === 'question'">Post Solution</div>
                   <div class="note-author">Submitted by {{note.author}}</div>
                 </div>
               </div>
