--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
                 <div class="note note-corrections" ng-repeat="note in step.notes" ng-if="canShowNote(note) && note.category === 'corrections'">
                   <div>{{note.content}}</div>
                   <div class="note-author">Submitted by {{note.author}}</div>
+                  <note></note>
                 </div>
               </div>
 
@@ -159,6 +160,7 @@
     <script src="/scripts/tutorialService.js"></script>
     <script src="/scripts/loggerService.js"></script>
     <script src="/scripts/mainController.js"></script>
+    <script src="/scripts/noteDirective.js"></script>
     <!-- /build -->
   </body>
 </html>
