--- a/app/index.html
+++ b/app/index.html
@@ -160,7 +160,7 @@
     <script src="/scripts/tutorialService.js"></script>
     <script src="/scripts/loggerService.js"></script>
     <script src="/scripts/mainController.js"></script>
-    <script src="/scripts/noteDirective.js"></script>
+    <!--<script src="/scripts/noteDirective.js"></script>-->
     <!-- /build -->
   </body>
 </html>
