--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
                   <div class="comment-footer">
                     <div class="plain-button reply-button" ng-click="addingReply($index, $event, note.id, note.author, note.step_id)" ng-if="(note.extra_info|lowercase) === 'question'">Post Answer</div>
                     <div class="note-author">Submitted by {{note.author}}</div>
-                    <note></note>
+                    <note ng-repeat="reply in note.replies" note="reply"></note>
                   </div>
                 </div>
               </div>
@@ -99,7 +99,7 @@
                 <div class="comment-footer">
                   <button class="plain-button reply-button" ng-click="addingReply($index, $event, comment.id, comment.author)">Reply</button>
                   <div class="note-author">Submitted by {{comment.author}}</div>
-                  <note></note>
+                  <!--<note ng-repeat="reply in comment.replies" note="reply"></note>-->
                 </div>
               </div>
             </div>
