--- a/app/index.html
+++ b/app/index.html
@@ -132,6 +132,7 @@
     <script src="/scripts/tutorialService.js"></script>
     <script src="/scripts/loggerService.js"></script>
     <script src="/scripts/mainController.js"></script>
+    <script src="/scripts/recursionHelper.js"></script>
     <script src="/scripts/noteDirective.js"></script>
     <!-- /build -->
   </body>
